# pxrd-viewer

./: .gitignore  App.py  Dockerfile  README.md  data_sources.py  pyproject.toml
.github/workflows/: docker.yml
pages/: 1_Add_Spectrum.py
pxrd_viewer/: App.py  altui.py  app.py  data_sources.py  menutheme.py  new_app.py
pxrd_viewer/pages/: 1_Add_Spectrum.py  2_Edit_Spectra.py  add_spectrum.py  edit_spectra.py  new_add_spectrum.py  new_edit_spectra.py
tests/: test_data_sources.py
