[project]
name = "pxrd-viewer"
version = "0.1.0"
description = "A simple pxrd spectrum viewer application."
authors = [
    { name = "Petrus Bellmonte", email = "mail@bellmonte.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.49",
    "streamlit-shortcuts==1.2.1",
    "ruff>=0.13.0",
    "plotly"
]

[lint]
select = ["E", "F", "W"]
