[project]
name = "pxrd_viewer"
version = "0.1.0"
description = "A simple pxrd spectrum viewer application."
authors = [
    { name = "Petrus Bellmonte", email = "mail@bellmonte.de" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.49",
    "streamlit-shortcuts==1.2.1",
    "plotly",
    "PyYAML",
    "nicegui>=3.0.0",
]

[dependency-groups]
test = ["pytest"]
lint = ["ruff>=0.13.0"]
dev = [ {include-group = "test"}, {include-group = "lint"} ]


[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E731"]
